			   XPCE ChangeLog
			   ==============

VERSION 6.5.28, distributed with SWI-Prolog 5.5.28
==================================================
	
* FIXED: Bug#85: conversion of unicode SWI-Prolog string objects to
  XPCE strings.  Dmitry.

* FIXED: Bug#81: dynamically deal with dropshadow setting for popup frames
  to avoid crash on windows versions older than XP. Holger Kanwischer.

* ADDED: Bug#79: `frame->icon' also sets the Windows `big' icon.
  Holger Kanwischer.

VERSION 6.5.27, distributed with SWI-Prolog 5.5.27
==================================================
	
* FIXED: `menu->selection' for single-selection menus sometimes wasn't
  honoured.

* FIXED: PceEmacs: colourising of use_module directives pointing to 
  non-existing files.

* FIXED: `file->kind'.   Petter Egesund.

VERSION 6.5.26, distributed with SWI-Prolog 5.5.26
==================================================
	
* Consistent numbering (SuSE 10.0 beta2)

VERSION 6.5.24, distributed with SWI-Prolog 5.5.24
==================================================

* FIXED: Text clipping in X11 systems using the Xft text rendering library.

* FIXED: Remove code calling XSetInputFocus() if a window gets the focus
  while it has a modal trainsient window.  This could cause BadMatch
  errors, killing XPCE.  In theory the window manager should do this
  properly anyway.


VERSION 6.5.23, distributed with SWI-Prolog 5.5.23
==================================================

* ADDED: display<-win_directory to exploit the standard Windows Shell
  directory dialog.

* ENHANCED: Win32: update GetSysColor() defined colours (name win_*).
  Steve Moyle.

* FIXED: pcePP() to return UTF-8 encoded strings if there is Unicode data
  in it.

* FIXED: prolog_term<-print_name (encoding issue).


VERSION 6.5.21, distributed with SWI-Prolog 5.5.21
==================================================

* FIXED: Bug#66: filename handling for names holding extended ISO Latin 1
  (128..256) characters.  Jiri Spitz.
